# pomodorable

./: .gitignore  Justfile  LICENSE.txt  README.md  devnotes.md  pyproject.toml  requirements.in  requirements.txt  ruff_defaults.toml
.github/workflows/: manual-tests-mac.yml  manual-tests-win.yml  tests.yml
src/pomodorable/: __about__.py  __main__.py  about_screen.py  app.tcss  app_config.py  app_data.py  app_utils.py  cli.py  mru_list.py  mru_screen.py  output_csv.py  output_md.py  quit_screen.py  settings_screen.py  timerbar.py  ui.py
tests/: conftest.py  test_app_config.py  test_app_data.py  test_cli.py  test_mru_list.py  test_pomodorable.py  test_ui.py
