[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "pomodorable"
dynamic = ["dependencies", "version"]
description = 'A pomodoro timer implemented as a Textual app'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["pomodoro timer", "pomodoro", "timer", "Textual", "TUI"]
authors = [
  { name = "Bill Melvin", email = "bill@billmelvin.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Source = "https://github.com/wmelvin/pomodorable"
Documentation = "https://github.com/wmelvin/pomodorable#readme"

[project.scripts]
pomodorable = "pomodorable.cli:cli"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.version]
path = "src/pomodorable/__about__.py"

[tool.hatch.envs.default]
installer = "uv"
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-asyncio",
  "textual-dev",
  "pytest-textual-snapshot",
  "pip-tools",
  "ruff",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pomodorable tests}"

[tool.coverage.run]
source_pkgs = ["pomodorable", "tests"]
branch = true
parallel = true
omit = [
  "src/pomodorable/__about__.py",
]

[tool.coverage.paths]
pomodorable = ["src/pomodorable", "*/pomodorable/src/pomodorable"]
tests = ["tests", "*/pomodorable/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.envs.hatch-static-analysis]
config-path = "none"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
  "A",    # flake8-builtins
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle errors
  "F",    # Pyfakes
  "FA",   # flake8-future-annotations
  "I",    # isort
  "ISC",  # flake8-implicit-str-concat
  "PERF", # Perflint
  "PL",   # Pylint
  "PTH",  # flake8-use-pathlib
  "PYI",  # flake8-pyi
  "RET",  # flake8-return
  "RUF",  # ruff-specific
  "TC",   # type-checking
  "S",    # flake8-bandit
  "SIM",  # flake8-simplify
  "SLF",  # flake8-self
  "W"     # Warning
]
# extend-select = ["ALL"]
ignore = [
  "PLR0912",  # too many branches
  "PLR0913",  # too many arguments
  "PLR0915",  # too many statements
  "RUF012",   # mutable class attributes
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = [
  "S101",     # assert
  "PLR2004",  # magic value
  "SLF001",   # private member accessed
]
